--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.alanloi</groupId>
   <artifactId>TestProject</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
 
   <scm>
     <connection>scm:git:https://github.com/loia/TestProject.git</connection>
