--- a/pom.xml
+++ b/pom.xml
@@ -8,4 +8,12 @@
     <connection>scm:git:https://github.com/loia/TestProject.git</connection>
     <developerConnection>scm:git:https://github.com/loia/TestProject.git</developerConnection>
   </scm>
+
+  <distributionManagement>
+    <repository>
+      <id>alanloi</id>
+      <name>Internal Repository</name>
+      <url>https://github.com/loia/mvn-repo/raw/master</url>
+    </repository>
+  </distributionManagement>
 </project>
